removed animations (to be replaced by GSAP), fixed spacing

--- a/src/styles/components/_navbar.scss
+++ b/src/styles/components/_navbar.scss
@@ -1,7 +1,7 @@
 .navbar {
   width: 100%;
   height: 65px;
-  padding: 3px 0 5px 0;
+  padding: 3px 0;
   display: flex;
   justify-content: space-around;
   align-items: center;
