--- a/src/styles/components/_overview.scss
+++ b/src/styles/components/_overview.scss
@@ -1,6 +1,6 @@
 .overview {
   width: 100%;
-  padding: 0px 30px;
+  padding: 0px 30px 20px 30px;
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
