--- a/src/styles/components/_pageContainer.scss
+++ b/src/styles/components/_pageContainer.scss
@@ -1,7 +1,6 @@
 .page-container {
   width: 100%;
   height: 100vh;
-  margin-top: 20px;
   background-color: $background-primary;
   border-radius: 25px 25px 0px 0px;
   padding: 15px 20px;
@@ -9,5 +8,21 @@
 
   .page-text {
     margin-bottom: 10px;
+  }
+}
+
+.filter {
+  display: flex;
+  gap: 5px;
+  align-items: center;
+
+  .date-picker {
+    width: 75px;
+    padding: 5px 10px;
+    color: $text-primary;
+    background-color: $background-tertiary;
+    border: none;
+    border-radius: 5px;
+    outline: none;
   }
 }
