--- a/src/styles/components/_records.scss
+++ b/src/styles/components/_records.scss
@@ -7,20 +7,5 @@
   display: flex;
   flex-direction: column;
   gap: 15px;
-}
-
-.filter {
-  display: flex;
-  gap: 5px;
-  align-items: center;
-
-  .date-picker {
-    width: 75px;
-    padding: 5px 10px;
-    color: $text-primary;
-    background-color: $background-tertiary;
-    border: none;
-    border-radius: 5px;
-    outline: none;
-  }
+  margin-top: 15px;
 }
